# ChangeLog for dev-python/restkit
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/restkit/ChangeLog,v 1.16 2014/04/23 08:27:32 idella4 Exp $

*restkit-4.2.2 (23 Apr 2014)

  23 Apr 2014; Ian Delaney <idella4@gentoo.org> +restkit-4.2.2.ebuild,
  -restkit-2.1.4.ebuild, -restkit-2.2.3.ebuild, -restkit-2.3.3.ebuild,
  -restkit-3.0.2.ebuild, restkit-4.2.1-r1.ebuild:
  bump; pypy2_0 dropped, keywords ppc ppc64 dropped (to appease ipython),
  general upgrade

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> restkit-4.2.1-r1.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> restkit-4.2.1-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  11 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org>
  restkit-4.2.1-r1.ebuild:
  ppc, ppc64 keywords added, bug 452764

  10 May 2013; Markus Meier <maekke@gentoo.org> restkit-4.2.1-r1.ebuild:
  add ~arm, bug #452764

  20 Mar 2013; Patrick Lauer <patrick@gentoo.org> restkit-4.2.1-r1.ebuild:
  Keywording for ~x86 too

*restkit-4.2.1-r1 (26 Feb 2013)

  26 Feb 2013; Mike Gilbert <floppym@gentoo.org>
  +files/restkit-exclude-tests.patch, +restkit-4.2.1-r1.ebuild,
  -restkit-4.2.0.ebuild, -restkit-4.2.1.ebuild:
  Exclude tests the right way.

*restkit-4.2.1 (10 Feb 2013)

  10 Feb 2013; Ian Delaney <idella4@gentoo.org> +restkit-4.2.1.ebuild:
  bump

  15 Jan 2013; Ian Delaney <idella4@gentoo.org> restkit-4.2.0.ebuild:
  tests folder removed to avoid file collisions, fixes Bug #451968

  15 Jan 2013; Ian Delaney <idella4@gentoo.org> restkit-4.2.0.ebuild:
  Remove unrequired 'leftover' eutils from inherit, thanks for noticing Arfrever

*restkit-4.2.0 (13 Jan 2013)

  13 Jan 2013; Ian Delaney <idella4@gentoo.org> +restkit-4.2.0.ebuild:
  bump; DEPEND & RDEPEND updraded,migrated to distutils-r1, closes Bug #416651

  29 Nov 2011; Mike Gilbert <floppym@gentoo.org> restkit-3.0.2.ebuild: