@@ -5,13 +5,13 @@ AUX restkit-exclude-tests.patch 720 SHA256 97a529b149b6c00e7cdec755e911870703c70
 DIST restkit-4.2.1.tar.gz 1863612 SHA256 0d5e025a0ae1c00eea8f17df5258679964d95f6e35f3c150764d5b9a4cfb8f79 SHA512 9b65b2c2013babf173d6ab094e5dabd754b42426aa894110a51d0a6784e90995296f7862b991590a3ea3061c7cf4b98ec96c4ca9f4d55819f500b5cd9bae51fd WHIRLPOOL 053e3dd43ac0bd25f3b09d17b8b8a253d37a3a1cae235428a99599b3da1c02646c94fc071656726a4ec54bdddd93b0e7330c223549acfeaf2c44c16ff1c81de3
 DIST restkit-4.2.2.tar.gz 1275904 SHA256 c0bda8eb7c643b5e818b612dab49121393abc8589c6cbe9b84085079d598599d SHA512 5ed08535e1a54b5594d97b059d8662ab4bc19c68e71a30719c4a533cba0f2d0e18872119752c62136563a32281e8f747414fbf843fd97dba138107ffcb5d1e4b WHIRLPOOL 6a6e336fc1ce5a6499a9886d6a131d7b9e117323467da62ff11278ae1713254d7ebc05a71221ccb9b3f092999902a94282397b9aa983c89758e39221d9dbee96
 EBUILD restkit-4.2.1-r1.ebuild 1433 SHA256 c8ea16140e4b0f6935589ae25dac3324d40e900f434df874346edbe355a91172 SHA512 382c99a89da4fc06c01986339240516535870788a615077da82f5faed061e91786c61ef2606289fe1f04e51dbe9f687b01b8f7fc44c56d19bc951bd293788fad WHIRLPOOL c8a16bdea17e433b1fa3dd9d46bb1aceac280eab531eef3fe50dcb1f680d878fcfb2d8833bf4ee9dfa1e84629868b87dfc24c86841f8995aff6351d5d9117127
-EBUILD restkit-4.2.2.ebuild 1364 SHA256 bdc8efdb8e350efd1bee4aeeabef8480f7324320113bd271fd82bca91e67c80b SHA512 758a84c39303750f5883abc029943b7d952c4f58f285af1f50fc7a9404b0ff9ae1c73b9d201d1ea0eba5465ddc573ddd1706edaa15a970808239f963a5d6f450 WHIRLPOOL 99de8dcded3955148b203702561a27cb07c0fc8b917c3e1505111379c4065f30c430e93e651f7e765c0368938e9498c3ddc063d3d179c0ce51cdfea9c352c80b
-MISC ChangeLog 2609 SHA256 87cab3fd96d9e96e1a877b3850fea60550f4bf8fd135ee35a3ab3c4f0619c3b9 SHA512 a0c27f9870d99d9e25b58c93a5c20a6dcd0fe8a68cd6ecd636d702a63807620b9b6a6840ab5306f9c1c0ac9024a7b57ca1c061f3f9ef8654cba3474d98d12cd5 WHIRLPOOL 865f85f4b6e2cf1125c3fa8c0ef0a5086721752e07c54723603b728895a5b25012437c663f318aff344d5d0d4def20c1316e41e2c2086b89421ed3fe05115a7e
+EBUILD restkit-4.2.2.ebuild 1323 SHA256 f06bc7bbf1ecfd4743062626d452e41e9ed5cf71b2115a7a7da259045528e112 SHA512 997b3a5603ba70f7192677ebc1da4a597f3f42dbdd5dcfedb1e611e5f3cc1adce40da317f85c1f4430fabc326efc3b81e03b512221fe080808395f2bd979ab7f WHIRLPOOL 346b8062a9a67ae682eb668e678704633ab32d519e1418259ce50e2220906d1a00c4abe64f558c99d491dbc77b264a2ddc164318de53e565207249008c8d9b75
+MISC ChangeLog 2719 SHA256 a5fc84353c2d42e1ea41e4bff26bcaa29ad56245407c03a252c471c35eea60b8 SHA512 ae46aa221d216f9abdc7fd9743cfa536855b718ee224e67e4ad0c6e26e7b5bcce0eb395100edae4e0e12a8ad4be6afbc99c3078d71e45af8c40e774fde5c3919 WHIRLPOOL 41778735d981bc190a724b306bad287e62073414f9ce3657162c562951b35bd65d6ac424f89657f339a70364b92e69faf1cad072f887e5bc5f67f2d420a384c2
 MISC metadata.xml 365 SHA256 d3b55f5084a9a6cf238a3b538d292fdb8677def37df1daaf0982287a48009fb8 SHA512 dbdd590df6540d14ad6f17553a6a6619a0bb9bfd2a1d6d6e199f682b92ea584bb9efa27620b373de05a2b43af144cc031820e8d0a1d2bd579938dbcf90740e5e WHIRLPOOL 12c4582f8af92574ee88bd63c9de7ffcaa34eea47c86006c82b61c46b2308b009a1c549038e010673f4cd07a505a72d0ebc82fad7879948dd92c35a741c71566
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNXd74ACgkQso7CE7gHKw0gsgCfVuTC2fRwy+vG6O1JBVnC8r1r
-lsgAn3aqJZtqZT7+/tI4uEf9Ag4e4e9I
-=Uo+A
+iEYEAREIAAYFAlOJ0kAACgkQso7CE7gHKw1zFACgx0RoP23lZG0lNm4b5+c6TgVX
+fBMAni/Y0fLYheDRmXvPgCrnqHPWBJXo
+=gVY0
 -----END PGP SIGNATURE-----
