@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] doc? ( dev-python/sphinx[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] dev-python/epydoc[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) test? ( cli? ( dev-python/ipython[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] ) dev-python/webob[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/socketpool-0.5.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/http-parser-0.8.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] dev-python/nose[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_pypy? ( virtual/pypy:0= ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)]
+DEPEND=dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] doc? ( dev-python/sphinx[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] dev-python/epydoc[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) test? ( cli? ( dev-python/ipython[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) dev-python/webob[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/socketpool-0.5.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/http-parser-0.8.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] dev-python/nose[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_pypy? ( virtual/pypy:0= ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)]
 DESCRIPTION=A HTTP ressource kit for Python.
 EAPI=5
 HOMEPAGE=http://github.com/benoitc/restkit
 IUSE=+cli doc examples test python_targets_python2_6 python_targets_python2_7 python_targets_pypy
 KEYWORDS=~amd64 ~arm ~x86
 LICENSE=MIT
-RDEPEND=cli? ( dev-python/ipython[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] ) dev-python/webob[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/socketpool-0.5.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/http-parser-0.8.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_pypy? ( virtual/pypy:0= ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)]
+RDEPEND=cli? ( dev-python/ipython[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) dev-python/webob[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/socketpool-0.5.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] >=dev-python/http-parser-0.8.3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)] python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_pypy? ( virtual/pypy:0= ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 python_targets_pypy )
 SLOT=0
 SRC_URI=mirror://pypi/r/restkit/restkit-4.2.2.tar.gz
 _eclasses_=distutils-r1	0ffe72d093023ff4f69e4ceaf6f63e4e	eutils	025442f2eecab39ad0b4e541b6e142af	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	6f0183db47dc66fccb7a6899f7209b48	python-utils-r1	8ba35e0dacf49c6cae65901d183c971f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=3e9b7f6d3b702ffac0f8199ac618252e
+_md5_=dabc40a07c45c0cfce172dc927f5f624
