@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/restkit
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/restkit/ChangeLog,v 1.16 2014/04/23 08:27:32 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/restkit/ChangeLog,v 1.17 2014/05/31 13:07:34 idella4 Exp $
+
+  31 May 2014; Ian Delaney <idella4@gentoo.org> restkit-4.2.2.ebuild:
+  correction to deps noted by Arfrever
 
 *restkit-4.2.2 (23 Apr 2014)
 
